--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+/* This styles are for the react paginate component */
+@import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
